tests/ui-tests/tests/cases/inline-fragment-exhaustiveness.stderr
error: Could not find a match for Test in MyUnionType. Did you mean TestStruct?
  --> $DIR/inline-fragment-exhaustiveness.rs:16:5
   |
16 |     Test(Test),
   |     ^^^^

error: This InlineFragment is missing a variant for TestStruct.  Either provide a variant for this type or add a fallback variant.
 --> $DIR/inline-fragment-exhaustiveness.rs:9:10
  |
9 | #[derive(cynic::InlineFragments)]
  |          ^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
